<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.lazuch.sketchupintro.act2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/draw_topic"
        android:textSize="@dimen/topic_text"
        android:layout_marginBottom="10dp"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_scr02"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView21"
        android:layout_above="@+id/imageButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="20dp"
                android:paddingTop="6px"
                android:src="@drawable/pic_line" />
            <TextView
                android:layout_gravity="left"
                android:id="@+id/TextView04"
                android:text="@string/line"
                android:textStyle="bold"
                android:textSize="@dimen/shortcut_text"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="20dp"
                android:paddingTop="6px"
                android:src="@drawable/pic_circle" />
            <TextView
                android:layout_gravity="left"
                android:id="@+id/TextView04"
                android:text="@string/circle"
                android:textStyle="bold"
                android:textSize="@dimen/shortcut_text"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="20dp"
                android:paddingTop="6px"
                android:src="@drawable/pic_rect" />
            <TextView
                android:layout_gravity="left"
                android:id="@+id/TextView04"
                android:text="@string/rectngle"
                android:textStyle="bold"
                android:textSize="@dimen/shortcut_text"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="20dp"
                android:paddingTop="6px"
                android:src="@drawable/pic_move" />
            <TextView
                android:layout_gravity="left"
                android:id="@+id/TextView04"
                android:text="@string/move"
                android:textStyle="bold"
                android:textSize="@dimen/shortcut_text"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="20dp"
                android:paddingTop="6px"
                android:src="@drawable/pic_rotate" />
            <TextView
                android:layout_gravity="left"
                android:id="@+id/TextView04"
                android:text="@string/rotate"
                android:textStyle="bold"
                android:textSize="@dimen/shortcut_text"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="20dp"
                android:paddingTop="6px"
                android:src="@drawable/pic_tape" />
            <TextView
                android:layout_gravity="left"
                android:id="@+id/TextView04"
                android:text="@string/tape"
                android:textStyle="bold"
                android:textSize="@dimen/shortcut_text"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="20dp"
                android:paddingTop="6px"
                android:src="@drawable/pic_eraser" />
            <TextView
                android:layout_gravity="left"
                android:id="@+id/TextView04"
                android:text="@string/eraser"
                android:textStyle="bold"
                android:textSize="@dimen/shortcut_text"/>
        </TableRow>



        </TableLayout>

    <ImageButton
        android:layout_width="74dp"
        android:layout_height="60dp"
        android:id="@+id/imageButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:foreground="@drawable/next3d"
        android:onClick="clickNext"/>

    <ImageButton
        android:layout_width="74dp"
        android:layout_height="60dp"
        android:id="@+id/imageButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:foreground="@drawable/prev3d"
        android:onClick="clickPrev" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:id="@+id/imageButtonHome"
        android:layout_alignTop="@+id/imageButton"
        android:layout_centerHorizontal="true"
        android:foreground="@drawable/home"
        android:onClick="clickHome" />



</RelativeLayout>
